--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -14,6 +14,7 @@ jobs:
         CONFIG: win_c_compilervs2015cxx_compilervs2015vc14
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: False
+        VCTargetsPath: C:\\Program Files (x86)\\MSBuild\\Microsoft.Cpp\\v4.0
   steps:
     # TODO: Fast finish on azure pipelines?
     - script: |
