--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,17 +1,15 @@
-build_number_decrement:
-- '1000'
 bzip2:
 - '1'
 c_compiler:
-- toolchain_c
+- gcc
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- toolchain_cxx
+- gxx
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
 libffi:
 - '3.2'
 ncurses:
@@ -45,12 +43,5 @@ tk:
 - '8.6'
 xz:
 - '5.2'
-zip_keys:
-- - c_compiler
-  - cxx_compiler
-  - channel_sources
-  - channel_targets
-  - docker_image
-  - build_number_decrement
 zlib:
 - '1.2'
