--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,9 +53,9 @@ source:
   - url: https://github.com/python/cpython-source-deps/archive/openssl-1.1.0i.zip    # [win]
     folder: externals/openssl-1.1.0i                                                 # [win]
     sha256: 2280b9b4cba4dfcffc96d41860c79bdfd2d35945f9dd5e5a545b467ef6f96603         # [win]
-  - url: https://github.com/python/cpython-bin-deps/archive/openssl-bin-1.1.0i.zip   # [win]
-    folder: externals/openssl-bin-1.1.0i                                             # [win]
-    sha256: 71db5e71d2d6307379bac6c581492d37b65f2ad67fea207f6c0222150a4a46a7         # [win]
+  - url: https://github.com/python/cpython-source-deps/archive/openssl-1.1.1a.zip    # [win]
+    folder: externals/openssl-1.1.1a                                                 # [win]
+    sha256: 845224b767f310b831590447ef77eb1b6fddfb206962f9d178522d79411fb918         # [win]
   - url: https://github.com/python/cpython-source-deps/archive/bzip2-1.0.6.zip       # [win]
     folder: externals/bzip2-1.0.6                                                    # [win]
     sha256: c42fd1432a2667b964a74bc423bb7485059c4a6d5dc92946d59dbf9a6bdb988d         # [win]
