--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,8 @@ source:
       - patches/0018-Unvendor-sqlite3.patch
       # https://bugs.python.org/issue35644
       - patches/0019-venv-Revert-a-change-from-https-github.com-python-cp.patch
-      - patches/0020-Add-CondaEcosystemModifyDllSearchPath.patch
+      # undefined reference to `CondaEcosystemGetWarnings'
+      # - patches/0020-Add-CondaEcosystemModifyDllSearchPath.patch
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
     folder: externals/xz-5.2.2                                                       # [win]
