--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -2,12 +2,16 @@ bzip2:
 - '1'
 c_compiler:
 - gcc
+c_compiler_version:
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
 - gxx
+cxx_compiler_version:
+- '7'
 docker_image:
 - condaforge/linux-anvil-comp7
 libffi:
@@ -34,7 +38,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 readline:
-- '7.0'
+- '8.0'
 sqlite:
 - '3'
 tk:
