--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -4,6 +4,8 @@ bzip2:
 - '1'
 c_compiler:
 - gcc
+c_compiler_version:
+- '7'
 cdt_arch:
 - aarch64
 cdt_name:
@@ -14,6 +16,8 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - gxx
+cxx_compiler_version:
+- '7'
 docker_image:
 - condaforge/linux-anvil-aarch64
 libffi:
@@ -42,7 +46,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 readline:
-- '7.0'
+- '8.0'
 sqlite:
 - '3'
 tk:
