--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,1 @@
-* @jakirkham
-* @jjhelmus
-* @mingwandroid
-* @msarahan
-* @ocefpaf
-* @pelson
+* @jakirkham @jjhelmus @mingwandroid @msarahan @ocefpaf @pelson
