--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,1 @@
-* @jakirkham
-* @jjhelmus
-* @mingwandroid
-* @msarahan
-* @ocefpaf
-* @pelson
-* @scopatz
+* @jakirkham @jjhelmus @mingwandroid @msarahan @ocefpaf @pelson @scopatz
