Update to 3.8 (WIP do not merge)

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set base_version = "3.7.3" %}
-{% set version = "3.7.3" %}
+{% set base_version = "3.8.0" %}
+{% set version = "3.8.0b3" %}
 {% set linkage_nature = os.environ.get('PY_INTERP_LINKAGE_NATURE', '') %}
 {% if linkage_nature != '' %}
   {% set linkage_nature = "_" ~ linkage_nature %}
@@ -7,34 +7,30 @@
 
 package:
   name: python
-  version: {{ version }}
+  version: {{ base_version }}
 
 source:
-  - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}.tar.xz
-    sha256: da60b54064d4cfcd9c26576f6df2690e62085123826cff2e667e72a91952d318
+  - url: https://www.python.org/ftp/python/{{ base_version }}/Python-{{ version }}.tar.xz
+    sha256: cd7a81efcc9f82e20f9d6a41fd6f9859ddc2a082dcbc3fa62932e53b6f41980f
     patches:
-      - patches/0001-Add-Anaconda-Distribution-version-logic.patch
-      - patches/0002-Darwin-Add-arch-x86_64-to-UnicCCompiler-ld_args.patch
-      - patches/0003-Win32-distutils-Also-look-for-executable.bat.patch
-      - patches/0004-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
-      - patches/0005-Win32-distutils-Add-support-to-cygwinccompiler-for-V.patch
-      - patches/0006-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
-      - patches/0007-Support-cross-compiling-byte-code.patch
-      - patches/0008-Win32-Fixes-for-Windows-GCC-interop-needed-by-RPy2-a.patch
-      - patches/0009-Darwin-Look-in-sysroot-usr-lib-include-if-sysroot-is.patch
-      - patches/0010-runtime_library_dir_option-Use-1st-word-of-CC-as-com.patch
-      - patches/0011-Win32-Do-not-download-externals.patch
-      - patches/0012-Add-support-for-_CONDA_PYTHON_SYSCONFIGDATA_NAME-if-.patch
-      - patches/0013-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
-      - patches/0014-Disable-new-dtags-in-unixccompiler.py.patch
-      - patches/0015-Fix-cross-compilation-on-Debian-based-distros.patch
-      - patches/0016-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
-      - patches/0017-Unvendor-openssl.patch
-      - patches/0018-Unvendor-sqlite3.patch
-      # https://bugs.python.org/issue35644
-      - patches/0019-venv-Revert-a-change-from-https-github.com-python-cp.patch
-      # undefined reference to `CondaEcosystemGetWarnings'
-      # - patches/0020-Add-CondaEcosystemModifyDllSearchPath.patch
+      - 0001-Add-Anaconda-Distribution-version-logic.patch
+      - 0002-Darwin-Add-arch-x86_64-to-UnicCCompiler-ld_args.patch
+      - 0003-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
+      - 0004-Win32-distutils-Add-support-to-cygwinccompiler-for-V.patch
+      - 0005-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
+      - 0006-Support-cross-compiling-byte-code.patch
+      - 0007-Win32-Fixes-for-Windows-GCC-interop-needed-by-RPy2-a.patch
+      - 0008-Darwin-Look-in-sysroot-usr-lib-include-if-sysroot-is.patch
+      - 0009-runtime_library_dir_option-Use-1st-word-of-CC-as-com.patch
+      - 0010-Win32-Do-not-download-externals.patch
+      - 0011-Add-support-for-_CONDA_PYTHON_SYSCONFIGDATA_NAME-if-.patch
+      - 0012-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
+      - 0013-Disable-new-dtags-in-unixccompiler.py.patch
+      - 0014-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
+      - 0015-Unvendor-openssl.patch
+      - 0016-Unvendor-sqlite3.patch
+      - 0017-venv-Revert-a-change-from-https-github.com-python-cp.patch
+      - 0018-Add-CondaEcosystemModifyDllSearchPath.patch
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
     folder: externals/xz-5.2.2                                                       # [win]
@@ -63,16 +59,28 @@ source:
     folder: externals/nasm-2.11.06                                                   # [win]
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
+
 build:
-  number: 1
+  number: 0
+  add_pip_as_python_dependency: false
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
     - DLLs/_ctypes.pyd  # [win]
-    - bin/python3.7  # [not win]
-  script_env:
-    - python_branding
-  skip: true  # [win and vc != 14]
+  # We delete the shared libraries.
+  ignore_run_exports:   # [unix]
+    - bzip2             # [unix]
+  detect_binary_files_with_prefix: False
+  # match python.org compiler standard
+  skip: True            # [win and vc != 14]
+# Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
+# Also this messes up hash generation so package ends up without any :-(
+# {% if linkage_nature != '' %}
+#   string: {{ version }}{{ linkage_nature }}
+# {% endif %}
+#  script_env:
+#    - PY_INTERP_LINKAGE_NATURE
+#    - python_branding
 
 requirements:
   build:
@@ -80,45 +88,46 @@ requirements:
     - {{ compiler('cxx') }}
     - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
     - {{ cdt('libx11-devel') }}          # [linux]
-    - make                               # [not win]
-    - pkg-config                         # [not win]
-    # - 7za                                # [win]
-    # - curl                               # [win]
+    - make                               # [unix]
+    - pkg-config                         # [unix]
+    - patch                              # [not win]
+    - m2-patch                           # [win]
   host:
-    # - nasm 2.11.06      # [win]
-    - bzip2             # [not win]
+    - bzip2                              # [unix]
     - sqlite
-    - xz                # [not win]
-    - zlib              # [not win]
+    - xz                                 # [unix]
+    - zlib                               # [unix]
     - openssl
-    - readline          # [not win]
-    - tk                # [not win]
-    - ncurses           # [linux]
-    - libffi            # [not win]
-  run:
-    - bzip2             # [not win]
-    - sqlite
-    - xz                # [not win]
-    - zlib              # [not win]
-    - openssl
-    - readline          # [not win]
-    - tk                # [not win]
-    - ncurses           # [linux]
-    - libffi            # [not win]
+    - readline                           # [unix]
+    - tk                                 # [unix]
+    - ncurses                            # [unix]
+    - libffi                             # [unix]
+   # run:
+   # # conda-build bug?
+   #  - ncurses >=6.1,<7.0a0               # [unix]
 
 test:
+  # Because we need to use xvfb-run on linux, from a CDT package.
+  requires:  # [linux]
+    # We are running centos6 software here (on whatever distro you are on)
+    # .. so it best be compatible (you should use centos6 if possible).
+    - {{ cdt('xorg-x11-server-xvfb') }}  # [linux]
+    - {{ cdt('xorg-x11-xauth') }}  # [linux]
+  files:
+    - tests.py
   commands:
     - python -V
-    - python3 -V            # [not win]
+    - python3 -V            # [unix]
     - 2to3 -h
     - pydoc -h
-    - python3-config --help  # [not win]
-    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
-    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
-    # Test for " -partition=none", can be removed after toolchain is dropped
-    - python -c "import sys; files = [f for f in sys.argv[2:] if ' -partition=none' in open(f, 'r').read()]; assert len(files) == 0, files" ${PREFIX}/lib/*/*.py  # [not win]
-    # - python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"
-    # -  _CONDA_PYTHON_SYSCONFIGDATA_NAME=_sysconfigdata_x86_64_conda_cos6_linux_gnu python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [linux64]
+    - python3-config --help  # [unix]
+    - PATH=$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/bin:$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/usr/bin:$PATH LD_LIBRARY_PATH=$CONDA_PREFIX/lib:$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/lib64:$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/usr/lib DISPLAY=localhost:1 xvfb-run python tests.py  # [linux]
+    - PATH=$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/bin:$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/usr/bin:$PATH LD_LIBRARY_PATH=$CONDA_PREFIX/lib:$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/lib64:$CONDA_PREFIX/x86_64-conda_cos6-linux-gnu/sysroot/usr/lib DISPLAY=localhost:1 idle -h  # [linux]
+    - python tests.py  # [not linux]
+    - idle -h  # [not linux]
+    - python -m venv %%TEMP%%\venv  # [win]
+    - python -c "import sysconfig; print sysconfig.get_config_var('CC')"
+    -  _PYTHON_SYSCONFIGDATA_NAME=_sysconfigdata_x86_64_conda_cos6_linux_gnu python -c "import sysconfig; print sysconfig.get_config_var('CC')"  # [linux64]
 
 about:
   home: http://www.python.org/
@@ -144,4 +153,3 @@ extra:
     - msarahan
     - pelson
     - ocefpaf
-    - scopatz
